[gd_scene load_steps=10 format=3 uid="uid://ds37rs1bweqo4"]

[ext_resource type="Script" uid="uid://biyh15ikfti76" path="res://games/smash_creeps/output.gd" id="1_rjhno"]
[ext_resource type="Theme" uid="uid://cqquurjk1i7yw" path="res://games/smash_creeps/ui_theme.tres" id="2_78qhr"]
[ext_resource type="PackedScene" uid="uid://bbk8xs4a8rnnd" path="res://games/smash_creeps/output/PlayerModel.tscn" id="2_k7wvi"]
[ext_resource type="Script" uid="uid://1g1un8b76ejr" path="res://games/smash_creeps/ScoreLabel.gd" id="3_k7wvi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cr5ed"]
albedo_color = Color(0.635294, 0.211765, 0.0235294, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_rjhno"]
material = SubResource("StandardMaterial3D_cr5ed")
radial_segments = 24
rings = 1

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rjhno"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_yutuu"]
sky_material = SubResource("ProceduralSkyMaterial_rjhno")

[sub_resource type="Environment" id="Environment_m1w2m"]
background_mode = 2
sky = SubResource("Sky_yutuu")
tonemap_mode = 2

[node name="Output" type="Node3D"]
script = ExtResource("1_rjhno")

[node name="Mobs" type="Node3D" parent="."]

[node name="Cylinders" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="MeshInstance" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, -15)
mesh = SubResource("CylinderMesh_rjhno")

[node name="MeshInstance3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 1, -15)
mesh = SubResource("CylinderMesh_rjhno")

[node name="MeshInstance2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 1, 16)
mesh = SubResource("CylinderMesh_rjhno")

[node name="MeshInstance4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, 16)
mesh = SubResource("CylinderMesh_rjhno")

[node name="DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, -0.777049, 0.382355, 0, 0.441506, 0.897258, -0.866025, -0.448629, 0.220753, 0, 12.5592, 14.7757)
shadow_enabled = true
shadow_bias = 0.04
shadow_blur = 1.5
directional_shadow_mode = 0
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 40.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_m1w2m")

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.183514, 0, 0)

[node name="Camera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 9.53674e-07, 19)
projection = 1
fov = 48.6
size = 24.0
far = 40.0

[node name="PlayerModel" parent="." instance=ExtResource("2_k7wvi")]

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_78qhr")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 77.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Score: 0"
script = ExtResource("3_k7wvi")

[node name="Retry" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.447059)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -13.0
offset_right = 75.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Press Space or Enter to retry"
